# FURIA

./: .env  .gitignore  README.md  config.txt  pyproject.toml
furia-fan-chat/: README.md  app.py  functions.py  start.bat  start.sh
furia-fan-chat/static/: script.js  style.css
furia-fan-chat/templates/: index.html
oFuriosoBot/: main.py  teste.py  teste2.py  teste2interativo.py  teste3.py
